<resources>
    <string name="label_title_empty_partnership">Belum Ada Kemitraan</string>
    <string name="label_description_empty_partnership">Silahkan tekan \"Daftar Kemitraan Baru\" di bawah untuk bergabung dengan mitra perusahaan atau kamu bisa melihat progress dari pendaftaran kemitraanmu</string>
    <string name="label_description_empty_register_partnership">Silahkan tekan \"+Tambah Kemitraan \" untuk bergabung dengan mitra perusahaan atau kamu bisa melihat progress dari pendaftaran kemitraanmu</string>
    <string name="label_register_new_partnership">Daftar Kemitraan Baru</string>
    <string name="label_check_register_partnership">Cek status pendaftaran kemitraanmu</string>
    <string name="label_check_my_register_partnership">Cek Status Pendaftaran Saya</string>
    <string name="label_sub_sector">Sub Sektor</string>
    <string name="action_add_partnership"><u>+Tambah Kemitraan</u></string>
    <string name="label_your_partnership_company">Mitra Perusahaan Anda</string>
    <string name="menu_partnership">Kemitraan</string>
    <string name="label_agriculture_horticulture">Pertanian Holtikultura</string>
    <string name="label_fishery_cultivator">Perikanan Budidaya</string>
    <string name="label_fishery_fisherman">Perikanan Tangkap</string>
    <string name="label_livestock_poultry">Peternakan Unggas</string>
    <string name="label_status_registration_submit_date">Diajukan %s</string>
    <string name="label_registration_status">Status Pendaftaran</string>
    <string name="label_title_empty_registration_status">Belum Ada Pendaftaran</string>
    <string name="label_description_empty_registration_status">Silahkan tekan \"Daftar Kemitraan Baru\" di bawah untuk bergabung dengan mitra perusahaan atau kamu bisa melihat progress dari pendaftaran kemitraanmu</string>
    <string name="title_company_partner_list">List Mitra Perusahaan</string>
    <string name="label_company_list">Daftar Perusahaan</string>
    <string name="placeholder_search_company">Cari Perusahaan atau Sub Sektor</string>
    <string name="label_title_empty_company">Tidak ada mitra perusahaan</string>
    <string name="label_description_empty_company">Saat ini belum ada mitra perusahaan yang tersedia</string>
    <string name="title_registration_status_details">Detail Status</string>
    <string name="label_registration_info">Info Pendaftaran</string>
    <string name="label_farm_area">Luas Area:</string>
    <string name="label_commodity">Komoditas:</string>
    <string name="action_cancel_proposal">Batalkan Pengajuan</string>
    <string name="shed_address">Alamat Lengkap Area</string>
    <string name="input_address">Masukkan Alamat</string>
    <string name="action_save_address">Simpan Alamat</string>
    <string name="label_village_only">Desa</string>
    <string name="action_register_partnership">Daftar Kemitraan</string>
    <string name="label_add_register">Apakah kamu yakin data yang diisi sudah sesuai?</string>
    <string name="actoin_sure">Yakin</string>
    <string name="action_not_sure">Belum</string>
    <string name="title_company_details">Detail Mitra Perusahaan</string>
    <string name="label_company_name">Nama Perusahaan</string>
    <string name="label_company_description">Deskripsi Perusahaan</string>
    <string name="label_see_more">Lihat Selengkapnya</string>
    <string name="label_company_address">Alamat Perusahaan</string>
    <string name="label_partnership_area">Area Cakupan Kemitraan</string>
    <string name="label_partnership_type">Jenis Kemitraan</string>
    <string name="label_commodities">Komoditas</string>
    <string name="label_company_partnership">Detail Mitra Perusahaan</string>
    <string name="label_vessel">List Area Peternakan</string>
    <string name="label_vessel_wide_area">Luas Area Peternakan</string>
    <string name="label_total_vessel_wide">Total Luas Kandang</string>
    <string name="label_taget_and_realization">Target dan Realisasi Produksi</string>
    <string name="increate_productivity">Lihat tingkat produktivitas peternakan Anda</string>
    <string name="label_target_ton">Target</string>
    <string name="label_production_ton">Produksi</string>
    <string name="label_realization_ton">Realisasi</string>
    <string name="label_locaton">Lokasi</string>
    <string name="label_cultivation_cycle">Siklus Budidaya</string>
    <string name="label_cultivation_activity">Aktivitas Budidaya</string>
    <string name="label_add_new_cultivation_activity">+ Tambah Aktivitas</string>
    <string name="label_title_empty_cultivation_activity">Belum Ada Aktivitas Budidaya</string>
    <string name="label_description_empty_cultivation_activity">Silahkan klik tombol "+ Tambah Aktivitas" dibawah untuk memulai aktivitas budidaya peternakan</string>
    <string name="label_varietas">Varietas</string>
    <string name="label_Strain">Strain</string>
    <string name="label_total_livestock">Total Ternak</string>
    <string name="label_leftover_feed">Sisa Pakan</string>
    <string name="label_cultivation_date">Tanggal Budidaya</string>
    <string name="label_livestock_age">Umur Ternak</string>
    <string name="label_cycle_to">Siklus ke-</string>
    <string name="error_choose_type">Jenis kemitraan belum dipilih</string>
    <string name="error_address_area">Alamat area peternakan tidak boleh kosong</string>
    <string name="error_commodity">Komoditas belum dipilih</string>
    <string name="label_vessel_detail_info">Info Area Peternakan</string>
    <string name="label_list_sub_vessel">List Kandang Anda</string>
    <string name="label_sub_vessel_id">ID Kandang</string>
    <string name="label_change_vessel_name_dialog_title">Ubah Nama Area Peternakan</string>
    <string name="label_change_vessel_name_dialog_subtitle">Apakah Anda yakin ingin mengganti nama area?</string>
    <string name="label_change_vessel_name_dialog_placeholder">Area Peternakan 1</string>
    <string name="action_yes">Ya</string>
    <string name="action_cancel">Batal</string>
    <string name="label_id_area_value">ID Area %s</string>
    <string name="label_success_update_vessel_name">Berhasil merubah nama area</string>
    <string name="label_show_less">Sembunyikan</string>
    <string name="label_add_address">Tambah Alamat</string>
    <string name="label_province">Provinsi</string>
    <string name="placeholder_province">Pilih Provinsi Anda</string>
    <string name="placeholder_village">Pilih Desa/Kelurahan anda</string>
    <string name="label_sub_district">Kecamatan</string>
    <string name="placeholder_sub_district">Pilih Kecamatan anda</string>
    <string name="label_district">Kabupaten/Kota</string>
    <string name="placeholder_district">Pilih Kabupaten/Kota anda</string>
    <string name="error_empty_field">%s tidak boleh kosong!</string>
    <string name="label_choose_unit">Pilih Satuan</string>
    <string name="label_fullname">Nama Lengkap</string>
    <string name="label_address">Alamat</string>
    <string name="label_nik">NIK</string>
    <string name="error_user_agreement">Anda belum menyetujui syarat dan ketentuan</string>
    <string name="error_nik_not_valid">NIK harus terdiri dari 16 digit angka</string>
    <string name="label_wide_area">Luas Area</string>
    <string name="label_register_partnership">Daftar Kemitraan</string>
    <string name="label_nik_full">Nomor Induk Kependudukan ( NIK )</string>
    <string name="input_nik">Masukkan NIK KTP</string>
    <string name="partnership_type">Jenis Kemitraan</string>
    <string name="label_cultivation_price_contract">Budidaya - Kontrak Harga</string>
    <string name="label_cultivation_makloon">Budidaya - Makloon</string>
    <string name="label_cultivation_rent_shed">Budidaya - Sewa Kandang</string>
    <string name="input_wide_area">Masukkan Luas Area</string>
    <string name="item_ha">Ha (hektar)</string>
    <string name="item_m2">M2 (meter persegi)</string>
    <string name="label_address_farm_area">Alamat Area Peternakan</string>
    <string name="label_tnc_checkbox_1">Saya setuju dengan</string>
    <string name="label_tnc_checkbox">Saya setuju dengan Syarat dan Ketentuan yang berlaku di aplikasi ini</string>
    <string name="label_farm_size_value">%.2f ha</string>
    <string name="label_active">Aktif</string>
    <string name="label_non_active">Tidak Aktif</string>
    <string name="label_farm_actual_size_value">%.0f/%.0f ha</string>
    <string name="empty_wide">Luas area tidak boleh kosong</string>
    <string name="label_cancel_registration_dialog_title">Pembatalan Pengajuan</string>
    <string name="label_cancel_registration_dialog_subtitle">Apakah Anda yakin ingin membatalkan pengajuan kemitraan?</string>
    <string name="action_cancel_registration">Ya, Batalkan</string>
    <string name="action_no">Tidak</string>
    <string name="label_register_success">Pendaftaran Berhasil Diajukan!</string>
    <string name="label_message_register_success">Silahkan tunggu hasil dari kami, anda bisa memeriksa progres pendaftaran anda di halaman Status Pendaftaran</string>
    <string name="label_ok">OK</string>
    <string name="label_title_empty_sub_vessel">Belum ada kandang</string>
    <string name="label_description_empty_sub_vessel">Saat ini belum ada belum memiliki kandang</string>
    <string name="label_choose">Pilih</string>
    <string name="label_propose_capital">Ajukan Modal</string>
    <string name="label_info_registration">Info Pendaftaran</string>
    <string name="action_register_partnership_2">Daftarkan</string>
    <string name="action_apply">Terapkan</string>
    <string name="label_area_address">Alamat Area:</string>
    <string name="label_subsector_name">Sub Sektor: %1$s %2$s</string>
    <string name="label_reason_rejected">Alasan Ditolak:</string>
    <string name="error_tnc"><![CDATA[Anda harus setuju dengan syarat & ketentuan yang berlaku untuk melanjutkan pendaftaran]]></string>
    <string name="bottom_sheet_warn">Pastikan semua data pendaftaran kemitraan yang anda masukkan sudah benar</string>
    <string name="label_see_status_register">Lihat Status Pendaftaran</string>
    <string name="label_reason_status_proses">Pendaftaran Diproses</string>
    <string name="label_reason_status_rejected">Pendaftaran Ditolak</string>
    <string name="label_status_review">Status Review</string>
    <string name="label_review">Review</string>
    <string name="label_all">Semua</string>
    <string name="label_area_used">Luas digunakan</string>
    <string name="label_accepted">Diterima</string>
    <string name="label_rejected">Ditolak</string>
    <string name="label_worker_name">Peternak</string>
    <string name="label_try_again">Coba Lagi</string>
    <string name="title_detail_partnership">Detail Kemitraan</string>
    <string name="label_view_company_details">Lihat Detail Perusahaan</string>
    <string name="label_info_partnership">Info Kemitraan</string>
    <string name="label_cannot_register">Tidak Dapat Mendaftar</string>
    <string name="label_already_registered">Anda sudah terdaftar di semua subsektor perusahaan ini</string>
    <string name="label_understand">Mengerti</string>
    <string name="label_input_wide_area">Masukkan luas area</string>
    <string name="label_continue">Lanjut</string>
    <string name="label_choose_commodities_first">Pilih Komoditas Terlebih Dahulu</string>
    <string name="label_select_commodity_by_ector">Pilih Komoditas dari Sektor %s</string>
    <string name="label_change">Ubah</string>
    <string name="label_must_choose_least_one_commodities">Anda harus memilih minimal salah satu komoditas yang tersedia untuk anda ajukan</string>
    <string name="label_choose_agricultural_commodities">Pilih Komoditas Pertanian</string>
    <string name="label_choose_agricultural">Pilih Komoditas %1$s</string>
    <string name="label_register_as_partner">Anda akan mendaftar sebagai mitra</string>
    <string name="label_with_the_following_information">dengan informasi sebagai berikut:</string>
</resources>