<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.telkom.legion.component.toolbar.LgnToolbarWhite
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_add_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cvSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:paddingBottom="@dimen/dimen_16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.telkom.legion.component.textfield.LgnTextAreaField
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shed_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderText="@string/input_address" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_province"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddress"
                app:placeholderText="@string/placeholder_province" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_district"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etProvince"
                app:placeholderText="@string/placeholder_district" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etSubDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_sub_district"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDistrict"
                app:placeholderText="@string/placeholder_sub_district" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_village_only"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSubDistrict"
                app:placeholderText="@string/placeholder_village" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/white"
        app:cardElevation="@dimen/dimen_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.telkom.legion.component.button.fill.LgnSecondaryFitButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="@string/action_save_address" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>