<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.telkom.legion.component.toolbar.LgnToolbarWhite
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/label_register_partnership" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSubSector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:paddingTop="@dimen/dimen_8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="1"
                tools:listitem="@layout/item_sub_sector_picker" />

            <com.telkom.legion.component.textfield.LgnTextAreaField
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shed_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUnit"
                app:placeholderText="@string/input_address" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_province"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddress"
                app:overrideDropdown="true"
                app:placeholderText="@string/placeholder_province" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_district"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etProvince"
                app:overrideDropdown="true"
                app:placeholderText="@string/placeholder_district" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etSubDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_sub_district"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDistrict"
                app:overrideDropdown="true"
                app:placeholderText="@string/placeholder_sub_district" />

            <com.telkom.legion.component.textfield.LgnDropdownField
                android:id="@+id/etVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_village_only"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSubDistrict"
                app:overrideDropdown="true"
                app:placeholderText="@string/placeholder_village" />

            <com.telkom.legion.component.textfield.LgnSingleUnitField
                android:id="@+id/etUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_wide_area"
                android:inputType="numberDecimal"
                app:layout_anchorGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvSubSector"
                app:placeholderText="@string/label_input_wide_area" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="?attr/radius5"
            app:layout_constraintBottom_toBottomOf="@+id/tvDescriptionSubSector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/dimen_16dp"
                android:paddingVertical="@dimen/dimen_12dp">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_continue"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/bodySmallBold"
                    android:textColor="?attr/white"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
